# shark-blood

./: pyproject.toml  requirements.txt
server/: README  app.py  chatbot.py  chatbot_helper.py  frontend.py  ngram.py  simulation.py  tokenize_test.py
server/static/: chat.js  styles.css
server/templates/: index.html
