[tool.poetry]
name = "sharks_blood"
version = "0.1.0"
description = ""
authors = ["Ethan Ordentlich <ethan.ordentlich2017@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
nltk = "^3.6.2"
Django = "^3.2.6"
Flask = "^2.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
